spell error corrected

--- a/index.html
+++ b/index.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="bar.ico">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/x-icon" href="bar.ico" />
+    <link rel="stylesheet" href="style.css" />
     <title>ProgressBar</title>
-</head>
-<body>
-    <di class="frem">
-        <div class="logo">
-            <img src="image.png" alt="img-snap">
-        </div>
-        <p class="title">Images</p>
-        <div class="storage">
-            <p>257.4 GB</p>
-            <p>1288 files</p>
-        </div>
-        <div class="loading"></div>
-    </di>
-</body>
+  </head>
+  <body>
+    <div class="frem">
+      <div class="logo">
+        <img src="image.png" alt="img-snap" />
+      </div>
+      <p class="title">Images</p>
+      <div class="storage">
+        <p>257.4 GB</p>
+        <p>1288 files</p>
+      </div>
+      <div class="loading"></div>
+    </div>
+  </body>
 </html>
